--- a/views/index.erb
+++ b/views/index.erb
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Fortune teller</title>
+    <llink rel="stylesheet" type="text/css" href="../../public/stylesheets/style.css">
+    </head>
+    
+    <body>
+     <h1>Welcome to the Fortune Teller</h1>
+      <p>Please enter your full name </p>
+      <form method=POST>
+        <input type="text" name="user">
+        <br>
+        <input type="submit" volume="Get your fortune!">
+        </form>
+   </body>
+  </html>
